# camera_model

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: External-Spice.cmake  FindSpice.cmake
include/mdis/: IsdReader.h  MdisNacSensorModel.h
include/transformations/: transformations.h
mdis2isd/isis/src/messenger/apps/mdis2isd/: CN0108840044M_IF_5_NAC_spiced.isd
python/: generate_isd.py  hardcoded.isd  requirements.txt
python/notebooks/: ISD.ipynb  ISD_WAC.ipynb  Image2Ground Testing.ipynb  g2i_collinear.ipynb  g2i_using_vectors.ipynb  g2i_with_camera_distortion.ipynb  i2g_g2i_testing.ipynb
src/: CMakeLists.txt  MdisNacSensorModel.cpp  MdisPlugin.h
src/apps/: CMakeLists.txt  i2g.cpp  mdis2isd.cpp  mdisNacNoBinning.isd  mdisset.cpp  rayi2g.cpp
src/apps/mdis2isd/: Makefile  mdis2isd.cpp  mdis2isd.h  mdis2isdapp.cpp
src/apps/mdis2isd/isis/src/messenger/apps/mdis2isd/: Makefile  isdapp  isdapp.objs  mdis2isd.cpp  mdis2isd.h  mdis2isd.xml
src/apps/set/: CMakeLists.txt  set.cpp  set.h
src/apps/spice2isd/: CMakeLists.txt  CSpiceIsd.cpp  CSpiceIsd.h  SpiceController.cpp  SpiceController.h  cspiceisd.cpp  cspiceisd.h  spice2isd.cpp
src/objs/: CMakeLists.txt  IsdReader.cpp  MdisNacSensorModel.cpp  MdisNacSensorModel.h  MdisPlugin.cpp
src/transformations/: CMakeLists.txt  transformations.cpp
tests/: CMakeLists.txt  MdisNacSensorModelTest.cpp  MdisNacSensorModelTest.h  MdisPluginTest.cpp  MdisWacSensorModelTest.cpp  TransformationsTest.cpp  mdisset.cpp  runTests.cpp  simpletest.cpp
tests/data/: CN0108840044M_IF_5_NAC_spiced.cub  CW1071364100B_IU_5.json  EN1007907102M.json  hardcoded.isd  msgr_mdis_v160.ti  naif0011.tls.txt
