INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include/mdis")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include/csm")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include/")

ADD_EXECUTABLE(set set.cpp)

# Find libcsmapi.so
FIND_LIBRARY(CSMAPI_LIBRARY csmapi "${CMAKE_SOURCE_DIR}/lib" "${CMAKE_SOURCE_DIR}/_build/INSTALL/lib")
MESSAGE(STATUS "CSMAPI_LIBRARY:	" ${CSMAPI_LIBRARY})

TARGET_LINK_LIBRARIES(set dl ${CSMAPI_LIBRARY} IsdReader MdisNacSensorModel MdisPlugin gdal)
